# Architekt

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 20260531_0001_init_articles.py  20260601_0002_add_cleaned_text_to_articles.py  20260601_0004_legacy_local_schema.py  20260612_0003_add_knowledge_models.py  20260612_0004_add_processing_runs.py  20260612_0005_add_request_payload.py  20260612_0006_add_section_columns.py  20260614_0007_rename_overview_json.py  20260615_0008_add_media_and_warnings.py  20260617_0009_add_knowledge_model_json_to_runs.py  20260617_0010_remove_knowledge_model_json_from_runs.py  20260623_0011_drop_request_payload.py  2fa022c93fe4_add_per_pass_json_columns_to_knowledge_.py
app/: __init__.py  logging_config.py
app/core/: __init__.py  config.py  errors.py  security.py  url_safety.py
app/llm/: __init__.py  llm_client.py
app/modules/: __init__.py
app/modules/extractor/: StoryModelSpecification.md  __init__.py  repository.py  router.py  schemas.py  service.py
app/modules/extractor/models/: extraction_result.py  knowledge_model.py  reasoning_output.py  (+2 more)
app/modules/ingestion/: __init__.py  firecrawl_client.py  router.py  schemas.py  service.py
app/modules/orchestrator/: __init__.py  router.py  schemas.py  service.py
app/modules/sections/: __init__.py
app/modules/storage/: __init__.py  router.py  schemas.py
app/modules/validator/: __init__.py  router.py  schemas.py  service.py
app/storage/: __init__.py  db.py  models.py  repository.py
(+41 files in other folders)
